Optimize removing scrollbars to avoid * selector in CSS

--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-* {
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    scrollbar-width: none;  /* Firefox */
-}
-
-*::-webkit-scrollbar { 
-    display: none;  /* Safari and Chrome */
-}
-
 body {
     background-color: palegoldenrod;
     -webkit-touch-callout: none;
@@ -19,6 +10,12 @@ body {
     -webkit-transition: background-color 300ms linear;
     -ms-transition: background-color 300ms linear;
     transition: background-color 300ms linear;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+body::-webkit-scrollbar { 
+    display: none;
 }
 
 .backgroundText {
@@ -142,6 +139,12 @@ body {
     background: gray;
     z-index: 999;
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.screen::-webkit-scrollbar { 
+    display: none;
 }
 
 #thebrick-screen {
@@ -300,6 +303,12 @@ body {
     margin-top: -30px;
     margin-bottom: -30px;
     filter: brightness(110%);
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.barricade::-webkit-scrollbar { 
+    display: none;
 }
 
 .chanvrerie {
@@ -358,6 +367,12 @@ body {
     display: inline-block;
     overflow: scroll;
     text-align: center;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
+}
+
+.building::-webkit-scrollbar { 
+    display: none;
 }
 
 #corinthe {
@@ -375,7 +390,13 @@ body {
     position: absolute;
     border: solid;
     overflow: scroll;
+    -ms-overflow-style: none;
+    scrollbar-width: none;
     text-align: center;
+}
+
+.recoverBox::-webkit-scrollbar { 
+    display: none;
 }
 
 #lootammo {
